{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 71,
  "lineage": "3ac56b66-e207-de6f-e1cd-e7e2828e68bd",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-020271428a5e636f4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-171-114-230.compute-1.amazonaws.com",
            "public_ip": "35.171.114.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudgeeks-ca-dev-eip-nat-gateway-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:internet-gateway/igw-0040c514893959086",
            "id": "igw-0040c514893959086",
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-igw",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020271428a5e636f4",
            "id": "nat-07d9ea02402d351f4",
            "network_interface_id": "eni-03a53eb5c981e6f8c",
            "private_ip": "10.11.8.108",
            "public_ip": "35.171.114.230",
            "subnet_id": "subnet-013950c829ec74f0f",
            "tags": {
              "Name": "cloudgeeks-ca-dev-nat-gateway-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0293eb609517ef95c",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9ea02402d351f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-db-route-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-083deafe8724842a4",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9ea02402d351f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-db-route-2",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08753d2086737d421",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9ea02402d351f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-db-route-3",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c3c0151314dc9478",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9ea02402d351f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-private-routes-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05ff036f353818f3f",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9ea02402d351f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-private-routes-2",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0489e39d2904a175e",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9ea02402d351f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-private-routes-3",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08edfd4210d6448a1",
            "owner_id": "366429520411",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0040c514893959086",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks-ca-dev-public-routes",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database-routes-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00068aeba058ea956",
            "route_table_id": "rtb-0293eb609517ef95c",
            "subnet_id": "subnet-096f2bacff93d3eed"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.database-routes",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f451a5150222f8e",
            "route_table_id": "rtb-083deafe8724842a4",
            "subnet_id": "subnet-020661425bb8e4671"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.database-routes",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6af2665fd708e87",
            "route_table_id": "rtb-08753d2086737d421",
            "subnet_id": "subnet-02cfb0fed5e8a0e37"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.database-routes",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028e75a5ebd3a189c",
            "route_table_id": "rtb-0c3c0151314dc9478",
            "subnet_id": "subnet-022023742d35ea249"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79aad1a9a28d252",
            "route_table_id": "rtb-05ff036f353818f3f",
            "subnet_id": "subnet-0e1d48565e701af94"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016def35685e1e015",
            "route_table_id": "rtb-0489e39d2904a175e",
            "subnet_id": "subnet-0bae6be34ce963251"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07587fb4ab906f306",
            "route_table_id": "rtb-08edfd4210d6448a1",
            "subnet_id": "subnet-013950c829ec74f0f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0086fe0671a630986",
            "route_table_id": "rtb-08edfd4210d6448a1",
            "subnet_id": "subnet-07985b36ee327cca5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ed62c057c9b1239",
            "route_table_id": "rtb-08edfd4210d6448a1",
            "subnet_id": "subnet-07bd678794849c11d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-096f2bacff93d3eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.96.0/20",
            "id": "subnet-096f2bacff93d3eed",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-db-subnet-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-020661425bb8e4671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.112.0/20",
            "id": "subnet-020661425bb8e4671",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-db-subnet-2",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-02cfb0fed5e8a0e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.128.0/20",
            "id": "subnet-02cfb0fed5e8a0e37",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-db-subnet-3",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-022023742d35ea249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.48.0/20",
            "id": "subnet-022023742d35ea249",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-private-subnets-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-0e1d48565e701af94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.64.0/20",
            "id": "subnet-0e1d48565e701af94",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-private-subnets-2",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-0bae6be34ce963251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.80.0/20",
            "id": "subnet-0bae6be34ce963251",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-private-subnets-3",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-013950c829ec74f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.0.0/20",
            "id": "subnet-013950c829ec74f0f",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-public-subnets-1",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-07985b36ee327cca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.16.0/20",
            "id": "subnet-07985b36ee327cca5",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-public-subnets-2",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:subnet/subnet-07bd678794849c11d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.32.0/20",
            "id": "subnet-07bd678794849c11d",
            "map_public_ip_on_launch": false,
            "owner_id": "366429520411",
            "tags": {
              "Name": "cloudgeeks-ca-dev-public-subnets-3",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c777f50805eb3a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366429520411:vpc/vpc-0c777f50805eb3a6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0546efcf038a72a4c",
            "default_route_table_id": "rtb-0faccd0fb6d230e72",
            "default_security_group_id": "sg-05429c4aa3bb196f9",
            "dhcp_options_id": "dopt-04722eadcf5112e83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c777f50805eb3a6b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0faccd0fb6d230e72",
            "owner_id": "366429520411",
            "tags": {
              "Location": "Ohio",
              "Name": "cloudgeeks-ca-vpc-dev",
              "alpha.eksctl.io/cluster-name": "cloudgeeks-ca-eks",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "cloudgeeks-ca-eks",
              "kubernetes.io/cluster/cloudgeeks-ca-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}